--- a/styles/main.css
+++ b/styles/main.css
@@ -1,18 +1,3 @@
-.criminalsContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.criminal {
-    border-style: dotted;
-    border-width: 1px;
-    margin: 10px;
-    width: 15rem;
-    flex-basis: 25%;
-    
-}
-
-.criminal--name {
-    font-size: x-large; 
-}
+@import "./criminals.css";
+@import "./filter.css";
+@import "./notes.css";
