--- a/styles/statements.css
+++ b/styles/statements.css
@@ -1,16 +1,16 @@
-.criminalsContainer {
+.statementContainer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
 
-.criminal {
+.statement {
     border: 1px dotted rgb(146, 95, 95);
     color: rgb(146, 95, 95);
     background-color: whitesmoke;
-    padding: 0.5em;
-    margin: 0.5em;
     display: flex;
     flex-direction: column;
-    flex-basis: 30%;
+    flex-basis: 25%;
+    padding: 0.5em;
+    margin: 0.5em;
 }
