criminal drop down works

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,5 @@
 @import "./criminals.css";
 @import "./filter.css";
 @import "./notes.css";
-@import "./statements.css"
+@import "./statements.css";
+@import "./header.css"
